2005-03-24  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 55606: [modified] tag doesn't work correctly.
	* kchartDataEditor.{h,cc} (m_modified): new member
	(modified): new method.
	(tableChanged): new slot
	(misc): set m_modified if data changed, including headers.
	* kchart_part.{h,cc} (slotModified): new slot
	(setData): connect wizard::finished() with slotModified
	* kchart_view.cc (edit, apply, wizard): call setModified() in document

2005-03-23  Inge Wallin  <inge@lysator.liu.se>

	Implement wish 45358: KChart start up dialog?
	* kchart_part.cc (initNullChart): New method
	(initDoc): Call KoTemplateChooseDia().
	* kchart_view.cc (KChartView): Don't initialize the standard chart.

	----------------------------------------------------------------

	Start with some simple support for templates.
	* templates: new directory
	* templates/Makefile.am: new file
	* templates/BarChart.chrt: new file, example chart template.
	
	----------------------------------------------------------------

	Bug fix.
	* kchartDataEditor.cc (setCols): Set width for all new columns.
	(misc): Code cleaning
	
	Code cleaning
	* kchartDataEditor.{h,cc}: Move some methods, change What's This
	strings, and add some comments.

	Documentation.
	* kchartDataEditor.{h,cc}: Document the reasons for the nice fix
	of Fredrik below.

2005-03-23  Fredrik Edemar <f_edemar@linux.se>

	Fix a problem with the spinboxes in the data editor:
	* kchartDataEditor.{h,cc} (kchartDataSpinBox): new class that
	inherits QSpinBox.
	(m_rowsSB, m_colsSB): Use kchartDataSpinBox instead of QSpinBox.

2005-03-18  Inge Wallin  <inge@lysator.liu.se>

	Improve layout for 3D bar chart parameters.
	* kchartParameter3dConfigPage.cc (KChartParameter3dConfigPage):
	Improve layout.

2005-03-17  Inge Wallin  <inge@lysator.liu.se>

	Remove the 3D Line Parameters page from the config dialog due to
	general uselessness and uglyness.
	* kchartConfigDialog.cc (KChartConfigDialog): Disabled 3D Line
	page.